test/tests/stages/13_floating-point_numbers/valid/function_calls/return_double.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: d
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstDouble: 
                    TDouble: 1234000000000000015006266381806410088493870738987584488716952523227596006096896.000000
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Double: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: retval
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: d
                      List[0]: 
                      None: 
                    None: 
                  Double: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: retval
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 1234000000000000015006266381806410088493870738987584488716952523227596006096896.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
